fix(buttons): fix invisible reload button

--- a/theme/parts/buttons-fixes.css
+++ b/theme/parts/buttons-fixes.css
@@ -236,6 +236,13 @@ button.close {
 	display: none !important;
 }
 
+/* Reload/stop button */
+#stop-reload-button[animate] {
+	> #reload-button > .toolbarbutton-icon,
+	> #reload-button[displaystop] + #stop-button > .toolbarbutton-icon {
+		fill: var(--gnome-window-color) !important;
+}
+
 /* Panel banner */
 #appMenu-popup .panel-banner-item {
 	margin: 0 0 6px !important;
